# poc-ec2-autoScaling

./: .gitignore  README.md  appspec.yml  cdk.json  index.html  package-lock.json  package.json
.github/workflows/: deploy.yml
app/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
app/templates/: index.html
docs/: ssm-connection-guide.md
lib/: oidc-for-github.ts  poc-ec2-autoscaling-stack.ts
lib/construct/: autoscaling-construct.ts  codedeploy-construct.ts  dns-construct.ts  ec2-construct.ts  ecr-construct.ts  iam-construct.ts  index.ts  loadbalancer-construct.ts  monitoring-construct.ts  network-construct.ts  s3-construct.ts
scripts/: after_install.sh  before_install.sh  create-oidc-provider.sh  deploy.sh  ec2-deploy.sh  start_application.sh  validate_service.sh
scripts/codedeploy/: after_install.sh  before_install.sh  validate_service.sh
scripts/tools/: connect-to-asg.sh  debug-instance.sh  list-asg-instances.sh
