[project]
name = "ec2-autoscaling-demo"
version = "1.0.0"
description = "Flask application for EC2 Auto Scaling Demo"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "flask>=2.3.3",
    "waitress>=2.1.2",
]
requires-python = ">=3.8"

[tool.uv]
dev-dependencies = [] 